# quelware-client

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
quelware-client/: CHANGELOG.md  Makefile  README.md  buf.gen.yaml  pyproject.toml
quelware-client/examples/: deploy_instrument.py  generate_readout_pulse.py  mock_client.py  use_instrument.py
quelware-client/src/quelware_client/: __init__.py
quelware-client/src/quelware_client/cli/: quel3_echo_test.py
quelware-client/src/quelware_client/client/: __init__.py  _grpc.py  _standalone_grpc.py
quelware-client/src/quelware_client/client/helpers/: __init__.py
quelware-client/src/quelware_client/client/helpers/instrument_mapper/: __init__.py
quelware-client/src/quelware_client/client/helpers/instrument_resolver/: __init__.py
quelware-client/src/quelware_client/client/helpers/sequencer/: __init__.py
quelware-client/src/quelware_client/core/: __init__.py  _agent_container.py  _client.py  _session.py  _utils.py
quelware-client/src/quelware_client/core/exceptions/: __init__.py
quelware-client/src/quelware_client/core/instrument_driver/: __init__.py
quelware-client/src/quelware_client/core/interfaces/diagnostics_agent/: __init__.py
quelware-client/src/quelware_client/core/interfaces/health_agent/: __init__.py
quelware-client/src/quelware_client/core/interfaces/instrument_agent/: __init__.py
quelware-client/src/quelware_client/core/interfaces/pat_provider/: __init__.py
quelware-client/src/quelware_client/core/interfaces/resource_agent/: __init__.py
quelware-client/src/quelware_client/core/interfaces/session_agent/: __init__.py
quelware-client/src/quelware_client/core/interfaces/system_configuration_agent/: __init__.py
quelware-client/src/quelware_client/core/interfaces/trigger_agent/: __init__.py
quelware-client/src/quelware_client/core/interfaces/worker_agent/: __init__.py
quelware-client/src/quelware_client/core/trigger_count_proposer/: __init__.py
quelware-client/src/quelware_client/infra/: _grpc_retry.py
quelware-client/src/quelware_client/infra/diagnostics_agent_grpc/: __init__.py
quelware-client/src/quelware_client/infra/health_agent_grpc/: __init__.py
quelware-client/src/quelware_client/infra/instrument_agent_grpc/: __init__.py
quelware-client/src/quelware_client/infra/pat_provider_file/: __init__.py
quelware-client/src/quelware_client/infra/resource_agent_grpc/: __init__.py
quelware-client/src/quelware_client/infra/session_agent_grpc/: __init__.py
quelware-client/src/quelware_client/infra/system_configuration_agent_grpc/: __init__.py
quelware-client/src/quelware_client/infra/trigger_agent_grpc/: __init__.py
quelware-client/src/quelware_client/infra/worker_agent_grpc/: __init__.py
quelware-client/src/quelware_client/testing/: __init__.py  mock_client.py
quelware-client/src/quelware_client/testing/instrument_agent_mock/: __init__.py
quelware-client/src/quelware_client/testing/resource_agent_mock/: __init__.py
quelware-client/src/quelware_client/testing/session_agent_mock/: __init__.py
quelware-client/src/quelware_client/testing/system_configuration_agent_mock/: __init__.py
quelware-client/src/quelware_client/testing/trigger_agent_mock/: __init__.py
quelware-client/src/quelware_client/testing/worker_agent_mock/: __init__.py
quelware-client/tests/core/client/: test_client.py
quelware-client/tests/core/client/helpers/: test_instrument_resolver.py  test_sequencer.py
quelware-client/tests/core/instrument_driver/: test_instrument_driver.py
quelware-client/tests/core/session/: test_session.py  test_trigger.py
quelware-client/tests/infra/instrument_agent_grpc/: test_wait_for_result.py
quelware-core/python/: Makefile  README.md  pyproject.toml
quelware-core/python/src/quelware_core/entities/clock/: __init__.py
quelware-core/python/src/quelware_core/entities/directives/: __init__.py
quelware-core/python/src/quelware_core/entities/instrument/: __init__.py
quelware-core/python/src/quelware_core/entities/port/: __init__.py
quelware-core/python/src/quelware_core/entities/resource/: __init__.py
quelware-core/python/src/quelware_core/entities/result/: __init__.py
quelware-core/python/src/quelware_core/entities/session/: __init__.py
quelware-core/python/src/quelware_core/entities/sysconf/: __init__.py
quelware-core/python/src/quelware_core/entities/unit/: __init__.py
quelware-core/python/src/quelware_core/entities/user/: __init__.py
quelware-core/python/src/quelware_core/entities/worker/: __init__.py
quelware-core/python/src/quelware_core/grpc_helper/error/: __init__.py
quelware-core/python/src/quelware_core/pb_converter/directive/: __init__.py
quelware-core/python/src/quelware_core/pb_converter/instrument/: __init__.py
quelware-core/python/tests/pb_converter/: test_directive.py  test_result.py
(+70 files in other folders)
