[project]
name = "quelware-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "quelware Authors", email = "opensource@quel-inc.com"},
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
